force-app/main/default/objects/Strategy_Memo__c/fields/Large_Claims_Data__c.field-meta.xml
<CustomField>
    <fullName>Large_Claims_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Claims Data</label>
    <type>Checkbox</type>
</CustomField>