force-app/main/default/objects/Strategy_Memo__c/fields/Membership_Activity__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Activity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Strategy Memos</relationshipLabel>
    <relationshipName>Strategy_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>