force-app/main/default/objects/Strategy_Memo__c/fields/Membership_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Activity Name</label>
    <type>TextArea</type>
</CustomField>