force-app/main/default/objects/Strategy_Memo__c/fields/MWBE_Requirements__c.field-meta.xml
<CustomField>
    <fullName>MWBE_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MWBE Requirements</label>
    <type>Checkbox</type>
</CustomField>