force-app/main/default/objects/Strategy_Memo__c/fields/NA_Network_Solutions__c.field-meta.xml
<CustomField>
    <fullName>NA_Network_Solutions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NA Network Solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>