force-app/main/default/objects/Strategy_Memo__c/fields/NAC_Deliverables_Due_to_CD_Dir__c.field-meta.xml
<CustomField>
    <fullName>NAC_Deliverables_Due_to_CD_Dir__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAC Deliverables Due to CD Dir</label>
    <type>Date</type>
</CustomField>