force-app/main/default/objects/Strategy_Memo__c/fields/Network_360_Reports__c.field-meta.xml
<CustomField>
    <fullName>Network_360_Reports__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network 360 Reports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>