force-app/main/default/objects/Strategy_Memo__c/fields/Network_Analysis_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Network_Analysis_Consultant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Analysis Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>