force-app/main/default/objects/Strategy_Memo__c/fields/NETWORK_ANALYSIS_File_Passwords_Here__c.field-meta.xml
<CustomField>
    <fullName>NETWORK_ANALYSIS_File_Passwords_Here__c</fullName>
    <label>NETWORK ANALYSIS - File Passwords Here</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>