force-app/main/default/objects/Strategy_Memo__c/fields/Network_Contracting_Issue_Other__c.field-meta.xml
<CustomField>
    <fullName>Network_Contracting_Issue_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Contracting Issue - Other</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>