force-app/main/default/objects/Strategy_Memo__c/fields/Network_Development_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Network_Development_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Development Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>