force-app/main/default/objects/Strategy_Memo__c/fields/Network_Discount_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Network_Discount_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Discount Guarantees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>