force-app/main/default/objects/Strategy_Memo__c/fields/Network_Market_Placemats_Needed__c.field-meta.xml
<CustomField>
    <fullName>Network_Market_Placemats_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Market Placemats Needed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>