force-app/main/default/objects/Strategy_Memo__c/fields/New_Business_Rate_Report_from_Actuarial__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Rate_Report_from_Actuarial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Business Rate Report from Actuarial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>