force-app/main/default/objects/Strategy_Memo__c/fields/Nexus_ACO__c.field-meta.xml
<CustomField>
    <fullName>Nexus_ACO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nexus ACO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>