force-app/main/default/objects/Strategy_Memo__c/fields/Nexus_ACO_Plan_Savings_PPT__c.field-meta.xml
<CustomField>
    <fullName>Nexus_ACO_Plan_Savings_PPT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nexus ACO Plan Savings PPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>