force-app/main/default/objects/Strategy_Memo__c/fields/Non_Standard_Requests_and_EMT_Needs__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Requests_and_EMT_Needs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-Standard Requests and EMT Needs</label>
    <type>TextArea</type>
</CustomField>