force-app/main/default/objects/Strategy_Memo__c/fields/Nonstandard_Performance_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Nonstandard_Performance_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nonstandard Performance Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>