force-app/main/default/objects/Strategy_Memo__c/fields/Notes_Taken_During_Call__c.field-meta.xml
<CustomField>
    <fullName>Notes_Taken_During_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes Taken During Call</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>