force-app/main/default/objects/Strategy_Memo__c/fields/Notes_Taken_on_call_with_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Notes_Taken_on_call_with_Consultant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes Taken on call  with Consultant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>