force-app/main/default/objects/Strategy_Memo__c/fields/NPS_Business_Dev_Mgr_BDM__c.field-meta.xml
<CustomField>
    <fullName>NPS_Business_Dev_Mgr_BDM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPS Business Dev Mgr BDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>