force-app/main/default/objects/Strategy_Memo__c/fields/NPS_Quality_Reviewer_SQC__c.field-meta.xml
<CustomField>
    <fullName>NPS_Quality_Reviewer_SQC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPS Quality Reviewer / SQC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>