force-app/main/default/objects/Strategy_Memo__c/fields/Onshoring_Domestic_Level__c.field-meta.xml
<CustomField>
    <fullName>Onshoring_Domestic_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onshoring Domestic Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>