force-app/main/default/objects/Strategy_Memo__c/fields/Onsite_Resource__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Resource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onsite Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>