force-app/main/default/objects/Strategy_Memo__c/fields/Optum_CLINICAL_PGs__c.field-meta.xml
<CustomField>
    <fullName>Optum_CLINICAL_PGs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum CLINICAL PGs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>