force-app/main/default/objects/Strategy_Memo__c/fields/Optum_CTO_BDC__c.field-meta.xml
<CustomField>
    <fullName>Optum_CTO_BDC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum CTO BDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>