force-app/main/default/objects/Strategy_Memo__c/fields/OPTUM_Financial_Sales__c.field-meta.xml
<CustomField>
    <fullName>OPTUM_Financial_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OPTUM Financial Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>