force-app/main/default/objects/Strategy_Memo__c/fields/Optum_Financial_Services__c.field-meta.xml
<CustomField>
    <fullName>Optum_Financial_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Financial Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>