force-app/main/default/objects/Strategy_Memo__c/fields/Optum_Rx_Sales__c.field-meta.xml
<CustomField>
    <fullName>Optum_Rx_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Rx Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>