force-app/main/default/objects/Strategy_Memo__c/fields/Optum_Surest_SME__c.field-meta.xml
<CustomField>
    <fullName>Optum_Surest_SME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Surest SME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>