force-app/main/default/objects/Strategy_Memo__c/fields/Other_Network_Resources__c.field-meta.xml
<CustomField>
    <fullName>Other_Network_Resources__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Network Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>