force-app/main/default/objects/Strategy_Memo__c/fields/Outcome_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Drivers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Drivers</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>