force-app/main/default/objects/Strategy_Memo__c/fields/Passport_HP_Pricing_Needed__c.field-meta.xml
<CustomField>
    <fullName>Passport_HP_Pricing_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport HP Pricing Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>