force-app/main/default/objects/Strategy_Memo__c/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>People</label>
    <length>255</length>
    <type>Text</type>
</CustomField>