force-app/main/default/objects/Strategy_Memo__c/fields/Pharmacy_Rebate_Questions__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Rebate_Questions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Rebate Questions?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>