force-app/main/default/objects/Strategy_Memo__c/fields/PHI_PII_Removed__c.field-meta.xml
<CustomField>
    <fullName>PHI_PII_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PHI/PII Removed?</label>
    <type>Checkbox</type>
</CustomField>