force-app/main/default/objects/Strategy_Memo__c/fields/PHS_Tier__c.field-meta.xml
<CustomField>
    <fullName>PHS_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PHS Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>