force-app/main/default/objects/Strategy_Memo__c/fields/Plan_Design_Compatibility_Review__c.field-meta.xml
<CustomField>
    <fullName>Plan_Design_Compatibility_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Design Compatibility Review</label>
    <type>Checkbox</type>
</CustomField>