force-app/main/default/objects/Strategy_Memo__c/fields/Platform_Stability__c.field-meta.xml
<CustomField>
    <fullName>Platform_Stability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Platform Stability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>