force-app/main/default/objects/Strategy_Memo__c/fields/POS__c.field-meta.xml
<CustomField>
    <fullName>POS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POS</label>
    <type>Checkbox</type>
</CustomField>