force-app/main/default/objects/Strategy_Memo__c/fields/Potential_Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Potential_Compelling_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Potential Compelling Event</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>