force-app/main/default/objects/Strategy_Memo__c/fields/PPO__c.field-meta.xml
<CustomField>
    <fullName>PPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPO</label>
    <type>Checkbox</type>
</CustomField>