force-app/main/default/objects/Strategy_Memo__c/fields/Pre_Implementation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Pre_Implementation_Audit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Implementation Audit</label>
    <type>TextArea</type>
</CustomField>