force-app/main/default/objects/Strategy_Memo__c/fields/Pre_member_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Pre_member_Web_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-member Web Site</label>
    <type>Checkbox</type>
</CustomField>