force-app/main/default/objects/Strategy_Memo__c/fields/Pricing_Analyst_Surest__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst_Surest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Analyst - Surest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>