force-app/main/default/objects/Strategy_Memo__c/fields/Pricing_by_Enrollment_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Pricing_by_Enrollment_Tiers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing by Enrollment Tiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>