force-app/main/default/objects/Strategy_Memo__c/fields/Primary_Consulting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consulting_Firm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Consulting Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>