force-app/main/default/objects/Strategy_Memo__c/fields/Primary_Situs_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Situs_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Situs State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>