force-app/main/default/objects/Strategy_Memo__c/fields/Private_Equity_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Private Equity Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>