force-app/main/default/objects/Strategy_Memo__c/fields/Proposal_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Date Due</label>
    <type>Date</type>
</CustomField>