force-app/main/default/objects/Strategy_Memo__c/fields/Proposal_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Date Received</label>
    <type>Date</type>
</CustomField>