force-app/main/default/objects/Strategy_Memo__c/fields/Proposal_Writers_Surest__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Writers_Surest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Writers - Surest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>