force-app/main/default/objects/Strategy_Memo__c/fields/Proposed_Plan_Design_s__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Plan_Design_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposed Plan Design(s)</label>
    <type>Checkbox</type>
</CustomField>