force-app/main/default/objects/Strategy_Memo__c/fields/Provider_Count__c.field-meta.xml
<CustomField>
    <fullName>Provider_Count__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Count</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>