force-app/main/default/objects/Strategy_Memo__c/fields/Provider_Counts__c.field-meta.xml
<CustomField>
    <fullName>Provider_Counts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Counts</label>
    <type>Checkbox</type>
</CustomField>