force-app/main/default/objects/Strategy_Memo__c/fields/Q_A_Responses_Due_Back__c.field-meta.xml
<CustomField>
    <fullName>Q_A_Responses_Due_Back__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Q &amp; A Responses Due Back</label>
    <type>Date</type>
</CustomField>