force-app/main/default/objects/Strategy_Memo__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire</label>
    <type>Checkbox</type>
</CustomField>