force-app/main/default/objects/Strategy_Memo__c/fields/Questions_to_Consultant_Due__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_Consultant_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questions to Consultant Due</label>
    <type>Date</type>
</CustomField>