force-app/main/default/objects/Strategy_Memo__c/fields/Quoting_CVG__c.field-meta.xml
<CustomField>
    <fullName>Quoting_CVG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quoting CVG</label>
    <type>Checkbox</type>
</CustomField>