force-app/main/default/objects/Strategy_Memo__c/fields/Reference_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Attributes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>