force-app/main/default/objects/Strategy_Memo__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References</label>
    <type>Checkbox</type>
</CustomField>