force-app/main/default/objects/Strategy_Memo__c/fields/Renewal_Rates_Fees__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rates_Fees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Rates/Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>