force-app/main/default/objects/Strategy_Memo__c/fields/Repricing_File__c.field-meta.xml
<CustomField>
    <fullName>Repricing_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repricing File</label>
    <type>Checkbox</type>
</CustomField>