force-app/main/default/objects/Strategy_Memo__c/fields/Repricing_File_Data_Included__c.field-meta.xml
<CustomField>
    <fullName>Repricing_File_Data_Included__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repricing File - Data Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>