force-app/main/default/objects/Strategy_Memo__c/fields/Repricing_NDA_for_Line_by_Line__c.field-meta.xml
<CustomField>
    <fullName>Repricing_NDA_for_Line_by_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repricing NDA for Line by Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>