force-app/main/default/objects/Strategy_Memo__c/fields/Required_Response_Other__c.field-meta.xml
<CustomField>
    <fullName>Required_Response_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Response - Other</label>
    <type>Checkbox</type>
</CustomField>