force-app/main/default/objects/Strategy_Memo__c/fields/Response_Current_Plan_Design_s__c.field-meta.xml
<CustomField>
    <fullName>Response_Current_Plan_Design_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Current Plan Design(s)</label>
    <type>Checkbox</type>
</CustomField>