force-app/main/default/objects/Strategy_Memo__c/fields/RFP_Current_Rates_Fees__c.field-meta.xml
<CustomField>
    <fullName>RFP_Current_Rates_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP - Current Rates/Fees</label>
    <type>Checkbox</type>
</CustomField>