force-app/main/default/objects/Strategy_Memo__c/fields/RFP_Primary_Consultant_s__c.field-meta.xml
<CustomField>
    <fullName>RFP_Primary_Consultant_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Primary Consultant(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>