force-app/main/default/objects/Strategy_Memo__c/fields/RFP_Release_NDA__c.field-meta.xml
<CustomField>
    <fullName>RFP_Release_NDA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Release NDA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>