force-app/main/default/objects/Strategy_Memo__c/fields/RFP_Renewal_Rates_Fees__c.field-meta.xml
<CustomField>
    <fullName>RFP_Renewal_Rates_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP - Renewal Rates/Fees</label>
    <type>Checkbox</type>
</CustomField>