force-app/main/default/objects/Strategy_Memo__c/fields/Richardson__c.field-meta.xml
<CustomField>
    <fullName>Richardson__c</fullName>
    <label>Richardson</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>