force-app/main/default/objects/Strategy_Memo__c/fields/Sales_Vice_President_CD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Vice_President_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Vice President – CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>