force-app/main/default/objects/Strategy_Memo__c/fields/Salesforce_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Opportunity_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>