force-app/main/default/objects/Strategy_Memo__c/fields/SCE_Assignment_Traditional__c.field-meta.xml
<CustomField>
    <fullName>SCE_Assignment_Traditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCE Assignment - Traditional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>