force-app/main/default/objects/Strategy_Memo__c/fields/Senior_Proposal_Development_Analyst_UMR__c.field-meta.xml
<CustomField>
    <fullName>Senior_Proposal_Development_Analyst_UMR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Senior Proposal Development Analyst-UMR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>