force-app/main/default/objects/Strategy_Memo__c/fields/Senior_Strategic_Coordinator_UMR__c.field-meta.xml
<CustomField>
    <fullName>Senior_Strategic_Coordinator_UMR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Senior Strategic Coordinator - UMR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>