force-app/main/default/objects/Strategy_Memo__c/fields/Service_Area_Report__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Area Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>