force-app/main/default/objects/Strategy_Memo__c/fields/SPDs_Availability_and_Compatibility_Docs__c.field-meta.xml
<CustomField>
    <fullName>SPDs_Availability_and_Compatibility_Docs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPDs Availability and Compatibility Docs</label>
    <type>TextArea</type>
</CustomField>