force-app/main/default/objects/Strategy_Memo__c/fields/SPDs_Submitted_for_compatibility_Review__c.field-meta.xml
<CustomField>
    <fullName>SPDs_Submitted_for_compatibility_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPDs submitted for compatibility review</label>
    <type>TextArea</type>
</CustomField>