force-app/main/default/objects/Strategy_Memo__c/fields/Special_EMT_Requested__c.field-meta.xml
<CustomField>
    <fullName>Special_EMT_Requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special EMT Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>