force-app/main/default/objects/Strategy_Memo__c/fields/Special_Notes_RFP__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Notes RFP</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>