force-app/main/default/objects/Strategy_Memo__c/fields/Specialty_Package_Credit__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Package_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Package Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>