force-app/main/default/objects/Strategy_Memo__c/fields/Spotlight_RFP__c.field-meta.xml
<CustomField>
    <fullName>Spotlight_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spotlight RFP</label>
    <type>Checkbox</type>
</CustomField>