force-app/main/default/objects/Strategy_Memo__c/fields/Strategic_Coordinator_CD__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Coordinator_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Coordinator  CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>