force-app/main/default/objects/Strategy_Memo__c/fields/Strategic_Question_No__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Question_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Question No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>