force-app/main/default/objects/Strategy_Memo__c/fields/Strategy_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Call Date</label>
    <type>Date</type>
</CustomField>