force-app/main/default/objects/Strategy_Memo__c/fields/Strategy_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Call_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Call Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>