force-app/main/default/objects/Strategy_Memo__c/fields/Strategy_Memo__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>