force-app/main/default/objects/Strategy_Memo__c/fields/Submission_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Submission_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>