force-app/main/default/objects/Strategy_Memo__c/fields/Surest_Approach_strategy__c.field-meta.xml
<CustomField>
    <fullName>Surest_Approach_strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest – Approach strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>