force-app/main/default/objects/Strategy_Memo__c/fields/Surest_Comments__c.field-meta.xml
<CustomField>
    <fullName>Surest_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>