force-app/main/default/objects/Strategy_Memo__c/fields/Surest_Last_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Surest_Last_Action_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest - Last Action Taken</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>