force-app/main/default/objects/Strategy_Memo__c/fields/Surest_Netwok__c.field-meta.xml
<CustomField>
    <fullName>Surest_Netwok__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Network Constraints</label>
    <length>255</length>
    <type>Text</type>
</CustomField>