force-app/main/default/objects/Strategy_Memo__c/fields/Surest_Next_Action_to_be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Surest_Next_Action_to_be_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest - Next Action to be Taken</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>