force-app/main/default/objects/Strategy_Memo__c/fields/Surest_SVP__c.field-meta.xml
<CustomField>
    <fullName>Surest_SVP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest SVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>