force-app/main/default/objects/Strategy_Memo__c/fields/Texting_an_E_mail_campaigns__c.field-meta.xml
<CustomField>
    <fullName>Texting_an_E_mail_campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texting an E-mail campaigns</label>
    <type>Checkbox</type>
</CustomField>