force-app/main/default/objects/Strategy_Memo__c/fields/Total_Cost_of_Care_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Care_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Cost of Care Analysis</label>
    <type>Checkbox</type>
</CustomField>