force-app/main/default/objects/Strategy_Memo__c/fields/Trend_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Trend_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trend Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>